infra/argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-server-ipallowlist
  namespace: kube-system
spec:
  ipAllowList:
    sourceRange:
      - "118.36.224.186/32"
      - "5.6.7.8/32"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.neidn.com`)
      middlewares:
        - name: argocd-server-ipallowlist
          namespace: kube-system
      priority: 10
      services:
        - name: argocd-server
          port: 80
  tls:
    certResolver: letsencrypt
